fix(模块): 修复样式

--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
   <title>智能微秘书</title>
   <link href="./web/index.css" rel="stylesheet"/></head>
 <body>
-<h1>智能微秘书</h1>
-<div id="info"></div>
-<div>
-  APIKEY: <input id="apikey" type="text">
+<div class="wrap">
+  <div class="main-content">
+    <h1 class="title">智能微秘书</h1>
+    <div class="input">
+      <span class="label">APIKEY:</span><input id="apikey" type="text">
+    </div>
+    <div class="input">
+      <span class="label">APISecret:</span><input id="apisecret" type="text">
+    </div>
+    <div class="action">
+      <button id="start" type="button">启动</button>
+      <button id="stop" type="button">停止</button>
+    </div>
+    <div id="log-wrap"></div>
+  </div>
 </div>
-<div>
-  APISecret: <input id="apisecret" type="text">
-</div>
-<button id="start" type="button">启动</button>
-<button id="stop" type="button">停止</button>
-<div id="log-wrap"></div>
+
 <script src="./web/renderer.js"></script>
 </body>
 </html>
